--- a/OpenPlottingLibrary/OPL-GUI/OPL-GUI.csproj
+++ b/OpenPlottingLibrary/OPL-GUI/OPL-GUI.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="iRenderable.cs" />
+    <Compile Include="IRenderable.cs" />
     <Compile Include="OPLViewControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
