--- a/OpenPlottingLibrary/OpenPlottingLibrary/OpenPlottingLibrary.csproj
+++ b/OpenPlottingLibrary/OpenPlottingLibrary/OpenPlottingLibrary.csproj
@@ -39,9 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Function.cs" />
     <Compile Include="PlaneGenerator.cs" />
     <Compile Include="Point3D.cs" />
-    <Compile Include="PointGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
