--- a/OpenPlottingLibrary/OPL-GUI/OPL-GUI.csproj
+++ b/OpenPlottingLibrary/OPL-GUI/OPL-GUI.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderables\Cube.cs" />
+    <Compile Include="Renderables\PointRenderer.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -86,6 +87,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OpenPlottingLibrary\OpenPlottingLibrary.csproj">
+      <Project>{402b8fe1-b54c-44af-a784-947225284716}</Project>
+      <Name>OpenPlottingLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
