--- a/OpenPlottingLibrary/OPL-GUI/OPL-GUI.csproj
+++ b/OpenPlottingLibrary/OPL-GUI/OPL-GUI.csproj
@@ -62,6 +62,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderables\AxisRenderer.cs" />
     <Compile Include="Renderables\Cube.cs" />
     <Compile Include="Renderables\PointRenderer.cs" />
     <EmbeddedResource Include="Form1.resx">
