--- a/OpenPlottingLibrary/OPL-GUI/OPL-GUI.csproj
+++ b/OpenPlottingLibrary/OPL-GUI/OPL-GUI.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GridGenerator.cs" />
     <Compile Include="AxisGenerator.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Form1.cs">
@@ -62,7 +63,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Renderables\AxisRenderer.cs" />
+    <Compile Include="Renderables\ZGridRenderer.cs" />
+    <Compile Include="Renderables\YGridRenderer.cs" />
+    <Compile Include="Renderables\XGridRenderer.cs" />
+    <Compile Include="Renderables\ZAxisRenderer.cs" />
+    <Compile Include="Renderables\YAxisRenderer.cs" />
+    <Compile Include="Renderables\XAxisRenderer.cs" />
     <Compile Include="Renderables\Cube.cs" />
     <Compile Include="Renderables\PointRenderer.cs" />
     <EmbeddedResource Include="Form1.resx">
